homelab-gitops/apps/media/base/bazarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bazarr.thundertest.org
      secretName: mealie-tls
  rules:
    - host: bazarr.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 80
